# ion-algorithm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aux.cc  aux.h  cec14_test_func.cc  clear.sh  cmake_install.cmake  domain.cc  domain.h  example.cc  example_ls  localsearch.cc  main.cc  makefile  metaheuristic.cc  metaheuristic.h  origcmaes.cc  problem.h  problemcec2014.cc  problemcec2014.h  running.h  simplex.cc
doc/: condsolid.tex  localsearch.rb  localsearch.tex  memoria.tex  normalization.rb  solidstate.tex  solidstate_v2.rb  solidstate_v2.tex
include/: algorithm.h  aux.h  ion.h  metaheuristic.h  solution.h
localsearchs/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md~  cec2014_func.cpp  cmaes_interface.h  cmaeshan.cc  cmake_install.cmake  example.cc  problem.cc  problem.h  real.h  running.cc  simplex.h  srandom.h
src/: CMakeLists.txt  README.md  algorithm.cpp  aux.cc  aux.cpp  aux.h  cec14_test_func.cpp  cmaeshan.cc  cmaeshan.h  define.h  example.cc  ilocalsearch.h  improvement.cc  improvement.h  ion.cpp  main  main.cc  main.cpp  metaheuristic.cc  metaheuristic.cpp  metaheuristic.h  problemcec2014.cc  solis.cc  solis.h  solution.cc  solution.cpp  solution.h  srandom.cc
tex/: condsolid.rb  genpscode.sh  localsearch.rb  localsearch.tex  memoria.aux  memoria.out  memoria.tex  memoria.tex.backup  memoria.toc  normalization.rb  normalization.tex  results.csv  solidstate.rb  solidstate.tex  solidstate_v2.rb  solidstate_v2.tex
